--- a/package.json
+++ b/package.json
@@ -1,27 +1,19 @@
 {
-  "name": "authapp-backend",
+  "name": "shoppingfy-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend server/api for shoppingfy",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon index.js",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/smiley-geek/passport-jwt.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "helmet": "^5.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.4",
-    "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth": "^2.0.0",
-    "passport-jwt": "^4.0.0"
-  }
+  "bugs": {
+    "url": "https://github.com/smiley-geek/passport-jwt/issues"
+  },
+  "homepage": "https://github.com/smiley-geek/passport-jwt#readme"
 }
